TTR file format changed
- random seed is now saved
- .ttr file now has all information about your game encrypted
- each version of tetris now has own control sum
- fixed graphical bug with negative cords
- rotation of T figure fixed
- rotations fixed
- random fixed: now generates figures by a bag which has all unique 7 figures in random order
- added a game version dword with general info about version
- added soft drop on SHIFT key
- added music toggle on M key

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 /tetris.EXE
 NEXT
 OLD
+RCDS_SAVE
 *.ttr
 *.ttr.real
 *.zip
 *.notexe
+ConvertTTRtoNewVersion.exe
 tetris-surface.EXE
 tetris-surface-2.EXE
+super_secret_settings.asm
