Leaderboard synhro added
- now it is client version, 5.1
- now client broadcasts register message thorug the net
- other clients reply this message with file update request (only when connected to then net!)
- .ttr file format changed (again) non critical
- Score procs became reusable (now request ptr to nick str)
- Work with multiple game displays started:
- field proc req ptr to field array
- LdScoreboard optimized
- minor fixes

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 NEXT
 OLD
 RCDS_SAVE
+RCDS_SAVE_1
 *.ttr
 *.ttr.real
 *.zip
@@ -13,3 +14,4 @@ tetris-surface.EXE
 tetris-surface-2.EXE
 super_secret_settings.asm
 Tetris_v_4_10
+ServerTest.exe
