--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,17 @@
 NEXT
 OLD
 RCDS_SAVE
+RCDS_SAVE_1
 *.ttr
 *.ttr.real
 *.zip
 *.notexe
+*.notzip
+*.png
 ConvertTTRtoNewVersion.exe
 tetris-surface.EXE
 tetris-surface-2.EXE
 super_secret_settings.asm
+Tetris_v_4_10
+ServerTest.exe
+lastnickname
