v.6.0. Chat works started
- minor optimizations
- chat added (max msg size is 22 letters)
- chat is nonscrollable
- fixed defwindowproc error
- WARN! This is debug version! Its strongly recommended do not use this version with stable ones.

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@ RCDS_SAVE_1
 *.ttr.real
 *.zip
 *.notexe
+*.exe
+*.EXE
 *.notzip
 *.png
+*.fas
 ConvertTTRtoNewVersion.exe
 tetris-surface.EXE
 tetris-surface-2.EXE
