v6 prerelease (testing & polishing left)
- minor optimizations
- help text reduced (due to its unnesesity)
- added texture swap on music effect
- added screen ratio calculations
- added possibility to load custom textures on demand
- added random end effect choose (4 variants)
- removed depth loop from the version (unused)

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,8 @@ RCDS_SAVE_1
 *.bmp
 *.mp3
 *.wav
-ConvertTTRtoNewVersion.exe
-tetris-surface.EXE
-tetris-surface-2.EXE
+*.prt
+*.txt
 super_secret_settings.asm
 Tetris_v_4_10
-ServerTest.exe
 lastnickname
